[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/ConfigUI/Sections/CollapsibleSection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/ConfigValueSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/ConfigUI/Sections/EnvironmentSection.gd" type="Script" id=4]

[node name="EnvironmentSection" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Label" parent="HBoxContainer" index="1"]
margin_right = 116.0
text = "Environment"

[node name="Body" parent="." index="1"]
margin_bottom = 160.0

[node name="Selectors" parent="Body" index="0"]
margin_bottom = 112.0

[node name="TilesXSelector" parent="Body/Selectors" index="0" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 1024.0
label = "Tiles X"
hint = "The number of tiles in the width of the environment"
min_value = 10.0
max_value = 100.0
step = 1.0

[node name="TilesYSelector" parent="Body/Selectors" index="1" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 54.0
label = "Tiles Y"
hint = "The number of tiles in the height of the environment"
min_value = 10.0
max_value = 100.0
step = 1.0

[node name="PopSizeSelector" parent="Body/Selectors" index="2" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 58.0
margin_right = 1024.0
margin_bottom = 83.0
label = "Population Size"
hint = "The number of slimes in the population"
min_value = 3.0
max_value = 100.0
step = 1.0

[node name="NumFoodSelector" parent="Body/Selectors" index="3" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 87.0
margin_right = 1024.0
margin_bottom = 112.0
label = "Food Count"
hint = "The number of food pellets in each iteration"
min_value = 1.0
max_value = 300.0
step = 1.0

[node name="UpdateButton" type="Button" parent="Body" index="1"]
margin_top = 116.0
margin_right = 1024.0
margin_bottom = 136.0
text = "Update"
[connection signal="pressed" from="Body/UpdateButton" to="." method="_on_UpdateButton_pressed"]
